--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.4.21"
     ext.hiltVersion = "2.28.1-alpha"
-    ext.navigationVersion = '2.2.0-rc02'
+    ext.navigationVersion = '2.3.5'
     ext.compiler_version = '7.0.3'
 
     repositories {
@@ -31,7 +31,7 @@ ext {
 
 
     // Navigation component
-    navigationVersion = '2.2.0-rc02'
+    navigationVersion = '2.3.5'
 
     // Hilt
     hiltAndroidXVersion = '1.0.0-alpha02'
