--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
     id 'dagger.hilt.android.plugin'
 }
 
@@ -71,5 +72,9 @@ dependencies {
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit2Version"
     implementation 'com.google.code.gson:gson:2.8.7'
+
+    implementation 'com.google.zxing:core:3.3.3'
+    implementation 'me.dm7.barcodescanner:zxing:1.9.13'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 
 }
